# stoat

./: CMakeLists.txt  Makefile  README.md
src/: arch.h  bench.cpp  bench.h  bitboard.h  core.h  keys.h  limit.cpp  limit.h  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  movepick.cpp  movepick.h  perft.cpp  perft.h  position.cpp  position.h  pv.h  rays.h  search.cpp  search.h  see.cpp  see.h  thread.cpp  thread.h  ttable.cpp  ttable.h  types.h  usi.cpp  usi.h
src/attacks/: attacks.h  util.h
src/attacks/bmi2/: bmi2.cpp  bmi2.h  data.h
src/attacks/sliders/: black_magic.cpp  black_magic.h  bmi2.cpp  bmi2.h  data.h  magics.h  util.h
src/eval/: eval.cpp  eval.h  material.h
src/protocol/: common.h  handler.cpp  handler.h  uci.cpp  uci.h  uci_like.cpp  uci_like.h  usi.cpp  usi.h
src/util/: align.h  barrier.h  bits.h  multi_array.h  parse.h  range.h  result.h  rng.h  split.cpp  split.h  static_vector.h  string_map.h  timer.cpp  timer.h
